--- a/src/main/resources/templates/Create/createMusician.html
+++ b/src/main/resources/templates/Create/createMusician.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="fragments/includes :: indexHead"></head>
-<body class="gradient-background" th:inline="text">
+<body th:inline="text">
 <div class="hide-on-med-and-down" th:include="fragments/navbar :: navHome"></div>
 
     <main class="musicSignup">
