--- a/src/main/resources/templates/Create/createCompany.html
+++ b/src/main/resources/templates/Create/createCompany.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="fragments/includes :: indexHead"></head>
-<body th:inline="text" class="signCompany gradient-background">
+<body th:inline="text" class="signCompany">
     <div class="hide-on-med-and-down" th:include="fragments/navbar :: navHome"></div>
     <main class="compSignup">
         <div class="background-image hide-on-med-and-down"></div>
