--- a/src/main/resources/templates/Messages/gigSuccess.html
+++ b/src/main/resources/templates/Messages/gigSuccess.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="fragments/includes :: indexHead"></head>
-<body th:inline="text" class="gradient-background">
+<body th:inline="text">
 <div th:include="fragments/navbar :: navHome"></div>
 
     <main class="success">
