--- a/src/main/resources/templates/Search/findBands.html
+++ b/src/main/resources/templates/Search/findBands.html
@@ -2,11 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="fragments/includes :: indexHead"></head>
-<body class="gradient-background" th:inline="text">
+<body th:inline="text">
 <div th:include="fragments/navbar :: navHome"></div>
 
 
-    <main class="container findBand">
+    <main class="container">
         <h1 class="white-text center-align">Find Musicians</h1>
         <div class="row">
             <div th:each="musician : ${musicians}" >
