--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2,10 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="fragments/includes :: indexHead"></head>
-<body class="gradient-background">
+<body th:inline="text" class="gradient-background">
 <div th:include="fragments/navbar :: navHome"></div>
 
-    <main th:inline="text" class="container">
+    <main  class="container">
 
 
         <h1>Welcome, [[${user.username}]]</h1>
