--- a/src/main/resources/templates/gigDetails.html
+++ b/src/main/resources/templates/gigDetails.html
@@ -4,21 +4,17 @@
 <head th:include="fragments/includes :: indexHead"></head>
 <body th:inline="text" id="gig-page" class="grey lighten-1 ">
 <main  >
-    <div class="profileBanner">
+
+
+
     <div th:include="fragments/navbar :: navHome"></div>
-
-        <section class="indigo darken-4 blur" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
-
-        </section>
-    </div>
-
-    <div class="container">
+    <div class="hide-on-med-and-down container">
 
         <div class="gig ">
-            <div th:if="${gig.companyProfile.user.username == user.username}" class="gig-nav">
+            <div th:if="${gig.companyProfile.user.username == user.username}">
                 <nav  class="gigNav transparent ">
 
-                    <ul>
+                    <ul class="right">
                         <li class="col s4">
                             <a class="waves-effect waves-light btn-floating" th:href="'/company/gig/' + @{${gig.id}} + '/update'">
                                 <i class="material-icons  tooltipped" data-position="top" data-delay="50" data-tooltip="Update Gig">edit</i>
@@ -35,56 +31,56 @@
                 </nav>
             </div>
             <div class="gig-info">
-                    <section class="gig-image white" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${gig.gigArt}}+') no-repeat center ; background-size: cover'">
-                        <div class="details-row white-text">
+                <section class="gig-image white" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${gig.gigArt}}+') no-repeat center ; background-size: cover'">
+                    <div class="details-row white-text">
 
-                            <p class="white-text gigTitle"><b>[[${gig.gigTitle}]]</b></p>
+                        <p class="white-text gigTitle"><b>[[${gig.gigTitle}]]</b></p>
 
 
 
-                        </div>
+                    </div>
+
+                </section>
+                <section class="time-description">
+
+                    <section class="gigDescript white">
+                        <p class="gigType">[[${gig.gigType}]]</p>
+
+                        <div class="divider"></div>
+                        <p class="valign-wrapper"><i class=" material-icons">event</i>
+                            [[${#dates.format(gig.gigStart,'EEE, d MMM yyyy')}]] <br/>
+                            <span style="margin-left: 3px;" th:if="${gig.gigStart != gig.gigEnd}"> [[${#dates.format(gig.gigEnd,'EEE, d MMM yyyy')}]]</span>
+                        </p>
+                        <div class="divider"></div>
+
+                        <p class="valign-wrapper"><i class=" material-icons">access_time</i>[[${gig.timeStart}]] to [[${gig.timeEnd}]]</p>
+
+                        <div class="divider"></div>
+
+                        <p>[[${gig.gigDescription}]]</p>
+
+
+
 
                     </section>
-                    <section class="time-description">
-
-                        <section class="gigDescript white">
-                                <p class="gigType">[[${gig.gigType}]]</p>
-
-                            <div class="divider"></div>
-                                <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">event</i>
-                                    [[${#dates.format(gig.gigStart,'EEE, d MMM yyyy')}]] <br/>
-                                    <span style="margin-left: 3px;" th:if="${gig.gigStart != gig.gigEnd}"> [[${#dates.format(gig.gigEnd,'EEE, d MMM yyyy')}]]</span>
-                                </p>
-                            <div class="divider"></div>
-
-                                <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">access_time</i>[[${gig.timeStart}]] to [[${gig.timeEnd}]]</p>
-
-                            <div class="divider"></div>
-
-                                <p>[[${gig.gigDescription}]]</p>
 
 
 
-
-                        </section>
-
-
-
-                        <section class="gig-map" th:style="'background:url('+ @{${url}}+')no-repeat center ; background-size: cover;'">
-                            <div class="locationBox left">
-                                <div >
-                                    [[${gig.gigLocation}]]
-                                </div>
-                                <div >
-                                    <a th:href="'https://maps.google.com/maps?q='+ @{${gig.gigLocation}}" target="_blank" class="waves-effect waves-light btn-floating tooltipped popup-gmaps" data-position="top" data-delay="50" data-tooltip="Directions"><i class="material-icons">map</i></a>
-                                </div>
+                    <section class="gig-map" th:style="'background:url('+ @{${url}}+')no-repeat center ; background-size: cover;'">
+                        <div class="locationBox left">
+                            <div >
+                                [[${gig.gigLocation}]]
                             </div>
-                        </section>
-
-
-
-
+                            <div >
+                                <a th:href="'https://maps.google.com/maps?q='+ @{${gig.gigLocation}}" target="_blank" class="waves-effect waves-light btn-floating tooltipped popup-gmaps" data-position="top" data-delay="50" data-tooltip="Directions"><i class="material-icons">map</i></a>
+                            </div>
+                        </div>
                     </section>
+
+
+
+
+                </section>
                 <div class="hire-right grey lighten-3">
                     <div th:if="${gig.gigHired} == true" >
                         <div class="center-align">
@@ -154,6 +150,142 @@
             </div>
         </div>
     </div>
+<div class="show-on-medium-and-down hide-on-large-only">
+    <div class="gig ">
+
+        <div class="gig-info">
+            <section class="gig-image white" th:style="'background:url('+ @{'https://s3.amazonaws.com/s3-gigfinder/' + ${gig.gigArt}}+') no-repeat center ; background-size: cover'">
+                <div class="details-row white-text">
+
+                    <p class="white-text gigTitle"><b>[[${gig.gigTitle}]]</b></p>
+
+
+
+                </div>
+
+            </section>
+            <section class="time-description">
+
+                <section class="gigDescript white">
+                    <p class="gigType">[[${gig.gigType}]]</p>
+
+                    <div class="divider"></div>
+                    <p class="valign-wrapper"><i class=" material-icons">event</i>
+                        [[${#dates.format(gig.gigStart,'EEE, d MMM yyyy')}]] <br/>
+                        <span style="margin-left: 3px;" th:if="${gig.gigStart != gig.gigEnd}"> [[${#dates.format(gig.gigEnd,'EEE, d MMM yyyy')}]]</span>
+                    </p>
+                    <div class="divider"></div>
+
+                    <p class="valign-wrapper"><i class=" material-icons">access_time</i>[[${gig.timeStart}]] to [[${gig.timeEnd}]]</p>
+
+                    <div class="divider"></div>
+
+                    <p>[[${gig.gigDescription}]]</p>
+
+
+
+
+                </section>
+
+
+
+                <section class="gig-map" th:style="'background:url('+ @{${url}}+')no-repeat center ; background-size: cover;'">
+                    <div class="locationBox left">
+                        <div >
+                            [[${gig.gigLocation}]]
+                        </div>
+                        <div >
+                            <a th:href="'https://maps.google.com/maps?q='+ @{${gig.gigLocation}}" target="_blank" class="waves-effect waves-light btn-floating tooltipped popup-gmaps" data-position="top" data-delay="50" data-tooltip="Directions"><i class="material-icons">map</i></a>
+                        </div>
+                    </div>
+                </section>
+
+
+
+
+            </section>
+            <div th:if="${gig.companyProfile.user.username == user.username}" class="gig-nav">
+
+                            <a class="waves-effect waves-light btn" th:href="'/company/gig/' + @{${gig.id}} + '/update'">
+                                <i class="material-icons  tooltipped" data-position="top" data-delay="50" data-tooltip="Update Gig">edit</i>
+                            </a>
+
+                            <a class="waves-effect waves-light btn modal-trigger" href="#gigDelete">
+                                <i class="material-icons  tooltipped" data-position="top" data-delay="50" data-tooltip="Delete Gig">delete</i>
+                            </a>
+
+
+            </div>
+            <div class="hire-right grey lighten-3">
+                <div th:if="${gig.gigHired} == true" >
+                    <div class="center-align">
+                        <h4 >Hired<i class="checkmark material-icons">check</i></h4>
+                        <div th:each="hired : ${hired}">
+
+                            <a th:href="'/find-bands/' + @{${hired.musicianProfile.id}}" >
+                                <img th:src="@{'https://s3.amazonaws.com/s3-gigfinder/' + ${hired.musicianProfile.profPicImage}} " class="cardImage hiredImage circle"/>
+                                <h5 class="black-text"><b>[[${hired.musicianProfile.firstName}]] [[${hired.musicianProfile.lastName}]]</b></h5>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div th:if="${gig.gigHired} != true">
+                    <div class="section">
+                        <p class="center-align appliedNum"><span class="orange-text text-accent-4">[[${gig.getMusicianApplyGigs().size()}]]</span> Musicians Applied </p>
+                    </div>
+                    <div class="section ">
+                        <div class="row">
+                            <div th:each="applied : ${applied}">
+                                <div class="container">
+                                    <div class="col s6 m3 l2">
+                                        <a th:href="'/find-bands/' + @{${applied.musicianProfile.id}}" >
+                                            <img th:src="@{'https://s3.amazonaws.com/s3-gigfinder/' + ${applied.musicianProfile.profPicImage}}" alt="" class="bandInfo hoverable bandApplied" />
+                                            <p class="center-align black-text">[[${applied.musicianProfile.firstName}]] [[${applied.musicianProfile.lastName}]]</p>
+                                        </a>
+
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div  th:if="${gig.companyProfile.user.username == user.username}" class="section">
+                        <div class="center-align">
+                            <a class='dropdown-button logBtn hireBtn hoverable' href='#' data-activates='hireDrop'>Select to Hire</a>
+
+                        </div>
+
+                        <ul id="hireDrop" class="dropdown-content" >
+                            <li th:each="applied : ${applied}">
+                                <a th:href="'/company/gig/' + @{${gig.id}} + '/confirm-hire/musician/' + @{${applied.musicianProfile.id}}" data-constrainwidth="false">
+                                    <div class="hireRow">
+                                        <img th:src="@{'https://s3.amazonaws.com/s3-gigfinder/' + ${applied.musicianProfile.profPicImage}} " class="navAvatar circle"/>
+                                        <p>[[${applied.musicianProfile.firstName}]] [[${applied.musicianProfile.lastName}]]</p>
+                                        <div class="divider"></div>
+                                    </div>
+
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div sec:authorize="hasRole('ROLE_MUSICIAN')" class="section">
+                        <div class=" section center-align ">
+                            <form  th:action="'/musician/gig/'+ @{${gig.id}} + '/apply'" method="post">
+                                <input type="submit" class="logBtn hireBtn hoverable" value="Apply for Gig"/>
+                            </form>
+
+                        </div>
+                    </div>
+
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+
+</div>
 
 
     </main>
