--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="fragments/includes :: indexHead"></head>
-<body class="gradient-background">
+<body th:inline="text" class="gradient-background">
 
     <main class="login ">
 
